# trunk-template

./: Cargo.toml  index.html  readme.md
src/: main.rs
